--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
         <div class="footer_two">
             <div class="container footer_last">
                 <div class="footer_item">
-                    <img src="img/footer_logo.png" alt="logo" class="footer_logo">
+                    <img src="img/footer_img.jpg" alt="logo" class="footer_logo">
                     <p class="footer_descr footer_descr__none">
                         © 2013-2021 | Сал-Терра - строительство соляных пещер, соляных комнат, галокамер
                     </p>
