--- a/index_product.html
+++ b/index_product.html
@@ -1097,6 +1097,9 @@
                         <p>
                             Эти статьи помогут вам разобраться с выбором оборудования для вашего бизнеса
                         </p>
+                        <p>
+                            Здесь вы найдете отзветы на самые актуальные вопросы о бизнесе в сфере сгелео и галотерапии.
+                        </p>
                     </div>
                     <div class="__item">
                         <h2>
@@ -1176,10 +1179,10 @@
             <div class="container footer_last">
                 <div class="footer_item">
                     <img src="img/footer_logo.png" alt="logo" class="footer_logo">
-                    <p class="footer_descr footer_descr__phone">
+                    <p class="footer_descr footer_descr__none">
                         © 2013-2021 | Сал-Терра - строительство соляных пещер, соляных комнат, галокамер
                     </p>
-                    <p class="footer_descr footer_descr__phone">
+                    <p class="footer_descr footer_descr__none">
                         Все права защищены. Перепечатка материалов и фотографий без согласования с владельцами сайта запрещена.
                     </p>
                 </div>
@@ -1229,7 +1232,7 @@
                 </div>
 
                 <div class="footer_item">
-                    <a href="" class="footer_descr">
+                    <a href="" class="footer_descr footer_descr_phone">
                         Свяжитесь с нами
                     </a>
                     <div class="footer_icon">
