--- a/cart_product.html
+++ b/cart_product.html
@@ -80,13 +80,13 @@
                     <div class="__item">
                         <div class="__title">
                             <div class="prev_catalog">
-                                <a href="index.html" class="title__arrow_prev">
+                                <a href="index.html" class="title__arrow_prev title__arrow">
                                     НА ГЛАВНУЮ
                                 </a>
                                 <p>
                                     /
                                 </p>
-                                <a href="index_product.html">
+                                <a href="index_product.html" class="title__arrow">
                                     ГАЛОГЕНЕРАТОРЫ
                                 </a>
                             </div>
