--- a/popup.html
+++ b/popup.html
@@ -50,7 +50,7 @@
                 <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
               <input name="phone" type="tell" id="phone" class="modal-form__input wpcf7-form-control tell"   required placeholder="Ваш Телефон*">
               <input name="email" type="text" id="email" class="modal-form__input wpcf7-form-control"   required placeholder="Ваш E-mail*">
-              <textarea   name="" id="123" cols="30" rows="10" class="wpcf7-form-control text"  placeholder="Задайте ваш вопрос*"></textarea>
+              <textarea   name="" id="123" cols="30" rows="10" class="wpcf7-form-control textarea"  placeholder="Задайте ваш вопрос*"></textarea>
               <p>
                 Поля, отмеченные *, обязательны для заполнения.
             </p>
